kustomize/overlays/dev/version.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeinfo-deployment
spec:
  # selector:
  #   matchLabels:
  #     app: kubeinfo
  template:
  #   metadata:
  #     labels:
  #       app: kubeinfo
    spec:
      containers:
      - name: kubeinfo-container
        image: ghcr.io/heymikeey/kube-info/kube-info:v2.2.0
