kustomize/overlays/dev/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - "/dev"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeinfo-ingress
  annotations:
      traefik.ingress.kubernetes.io/router.middlewares: kubeinfo-dev-strip-prefix-dev@kubernetescrd
spec:
  rules:
    - host: mjlab.servehttp.com
      http:
        paths:
          - path: /dev/kubeinfo
            pathType: Prefix
            backend:
              service:
                name: kubeinfo
                port:
                  number: 80
